# PIRS

./: PIRS.py  README.md  comparison_figs.py  get_FPKM_denoms.r  pyproject.toml  run_pirs.py
PIRS/: Untitled-1  rank.py  simulations.py
data/: diagram.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/: rank.py
tests/: conftest.py  test_rank.py  test_simulations.py
