[project]
name = "PIRS"
version = "0.1.1"
description = "Prediction Interval Ranking Score"
authors = [{ name = "Alec Crowell", email = "alexander.m.crowell@gmail.com" }]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["circadian", "time series", "constitutive expression", "bioinformatics"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=0.24",
    "tqdm>=4.60",
    "matplotlib>=3.10.9",
    "seaborn>=0.11",
]

[project.urls]
Homepage = "https://github.com/aleccrowell/PIRS"
Repository = "https://github.com/aleccrowell/PIRS"

[tool.poetry]
packages = [{ include = "PIRS" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
